--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "mongodb": "^6.20.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-auth": "^4.24.11",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
